[package]
name = "nym-chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuirealm = "0.3.0"
nym-websocket = { package = "websocket-requests", git = "https://github.com/nymtech/nym", tag = "v0.9.2" }
nym-addressing = { package = "nymsphinx-addressing", git = "https://github.com/nymtech/nym", tag = "v0.9.2" }
bincode = "1.3.1"
tokio = { version = "1.1", features = [ "full" ] }
aes-gcm = "0.9.1"
serde = { version = "1.0.123", features = [ "derive" ] }
rand = "0.8.3"
structopt = "0.3.21"
tokio-tungstenite = "0.13.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
warp = "0.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
futures = "0.3.15"
hex = "0.4.3"
anyhow = "1.0.40"
reqwest = {version = "0.11.3", features = ["json"]}